# iplayed

./: .gitignore  .gitmodules  404.html  CNAME  README.md  index.html  main.css  main.py  pyproject.toml  search_index.en.json  sitemap.xml
.github/workflows/: main.yml
css/: style.css
flags/: index.html
flags/all achievements unlocked/: index.html
flags/backseat mode/: index.html
games/: index.html
games/3-d-ultra-pinball/: index.html
games/a-plague-tale-innocence/: index.html
games/a-short-hike/: index.html
games/a-way-out/: index.html
games/ace-combat-3-electrosphere/: index.html
games/ace-combat-7-skies-unknown-top-gun-maverick-ultimate-edition/: index.html
games/adventure-island--1/: index.html
games/age-of-empires/: index.html
games/age-of-empires-ii-hd-edition/: index.html
games/age-of-empires-iii/: index.html
games/age-of-mythology/: index.html
games/age-of-mythology-the-titans/: index.html
games/alien-isolation/: index.html
games/animal-well/: index.html
games/apocalypse/: index.html
games/armored-core-vi-fires-of-rubicon/: index.html
genres/: index.html
iplayed_cli/: app.py  completions_file_db.py  completions_to_markdown.py  completions_view.py  config.py  config_review.py  data_entry_view.py  data_schema.py  db_export_to_ssg.py  deploy_confirmation.py  file_persistence.py  generation_screen.py  igdb.py  local_data.py  main_menu.py  pixelate.py  results_view.py  search_view.py  star_rating_bar.py  utils.py
iplayed_ssg/: config.toml
js/: games-search.js  stats-dashboard.js
rating/: index.html
stats/: index.html
(+1075 files in other folders)
